--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@ wp-content/advanced-cache.php
 wp-content/backup-db/
 wp-content/backups/
 wp-content/blogs.dir/
-wp-content/cache/
+cache/
 wp-content/upgrade/
 wp-content/uploads/
 wp-content/wp-cache-config.php
