--- a/composer.json
+++ b/composer.json
@@ -32,8 +32,7 @@
   },
   "autoload": {
     "psr-4": {
-      "ChileanIndicator\\": "inc/",
-      "ChileanIndicatorWidget\\": "widgets/"
+      "ChileanIndicator\\": "src/"
     }
   },
   "autoload-dev": {
